# minchin.releaser

./: MANIFEST.in  README.rst  changelog.rst  invoke.yaml  pyproject.toml  readme.rst  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  isort.yml
minchin/releaser/: constants.py  make_release.py  util.py  vendorize.py
minchin/releaser/test/: test_setup.py
